k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: react-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: react-app

  template:
    metadata:
      labels:
        app: react-app

    spec:
      containers:
      - name: react-app
        image: vamsi1409/react-k8s-app:v1

        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "250m"
            memory: "1Gi"
