k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: react-service

spec:
  selector:
    app: react-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

  type: NodePort
